[gd_scene load_steps=4 format=3 uid="uid://dflomqerawlkd"]

[ext_resource type="Script" path="res://game_leaderboard.gd" id="1_2dgs0"]
[ext_resource type="Theme" uid="uid://dbq0oqmtntggv" path="res://GameLeaderboard.tres" id="1_p6rh6"]
[ext_resource type="PackedScene" uid="uid://da74g8v6mlj5q" path="res://LeaderboardEntry.tscn" id="2_kylnn"]

[node name="GameLeaderboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p6rh6")
script = ExtResource("1_2dgs0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -302.0
offset_top = 13.0
offset_right = -12.0
offset_bottom = 328.0
grow_horizontal = 0

[node name="LeaderboardEntry" parent="VBoxContainer" instance=ExtResource("2_kylnn")]
layout_mode = 2

[node name="LeaderboardEntry2" parent="VBoxContainer" instance=ExtResource("2_kylnn")]
layout_mode = 2

[node name="LeaderboardEntry3" parent="VBoxContainer" instance=ExtResource("2_kylnn")]
layout_mode = 2

[node name="LeaderboardEntry4" parent="VBoxContainer" instance=ExtResource("2_kylnn")]
layout_mode = 2

[node name="LeaderboardEntry5" parent="VBoxContainer" instance=ExtResource("2_kylnn")]
layout_mode = 2

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.403922)
custom_minimum_size = Vector2(137.42, 40)
layout_mode = 2
offset_left = 966.87
offset_top = 233.0
offset_right = 1106.01
offset_bottom = 273.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -13.0
offset_right = 1.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Current Top 5"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
